# TMJOs

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  index.html  run.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build-deb.yml  build-iso.yml
apps/tmjmenu/: Cargo.toml  Makefile  README.md  pyproject.toml
apps/tmjmenu/data/: br.com.tmjsistemas.tmjmenu.appdata.xml  tmjdock.desktop  tmjmenu-first-run  tmjmenu-first-run.desktop  tmjmenu.desktop
apps/tmjmenu/src/: config.rs  launcher.rs  lib.rs  monitors.rs  search.rs  widgets.rs  x11.rs
apps/tmjmenu/tmjmenu/: __init__.py  __main__.py  app.py  config.py  dock.py  launcher.py  monitors.py  search.py  widgets.py  x11.py
apps/tmjpad/: Cargo.toml  Makefile  README.md  pyproject.toml
apps/tmjpad/data/: br.com.tmjsistemas.tmjpad.appdata.xml  tmjpad.desktop
apps/tmjpad/src/: app.rs  css.rs  find_replace.rs  main.rs  persistence.rs  tab.rs  window.rs
apps/tmjpad/tests/: test_persistence.py
apps/tmjpad/tmjpad/: __init__.py  __main__.py  app.py  persistence.py
apps/tmjstore/: Cargo.toml  Makefile  README.md  pyproject.toml
apps/tmjstore/data/: br.com.tmjsistemas.tmjstore.appdata.xml  tmjstore.desktop
apps/tmjstore/src/: app.rs  css.rs  detail.rs  discover.rs  installer.rs  main.rs
apps/tmjstore/tmjstore/: __init__.py  __main__.py  app.py  detail.py  discover.py  installer.py
assets/plymouth/tmjos/: tmjos.plymouth  tmjos.script
conf/: distributions
db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
distro/: build.sh  packages.list  remove.list
distro/hooks/: 01-remove-bloat.sh  02-install-dev-tools.sh  03-apply-theme.sh  04-setup-tmjmenu.sh  05-branding-installer.sh
distro/theme/: terminalrc  tmjos-terminal.theme  xfce4-desktop.xml  xfce4-panel.xml
distro/theme/gtk-3.0/: settings.ini
dists/noble/: InRelease  Release  Release.gpg
dists/noble/main/binary-amd64/: Packages  Release
dists/noble/main/source/: Release
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages  Release
dists/stable/main/source/: Release
dists/trixie/: InRelease  Release  Release.gpg
dists/trixie/apps/binary-amd64/: Release
dists/trixie/apps/source/: Release
dists/trixie/extras/binary-amd64/: Release
dists/trixie/extras/source/: Release
dists/trixie/main/binary-amd64/: Packages  Release
dists/trixie/main/source/: Release
docs/: BUILD.md  CHECKLIST.md  DESIGN.md
docs/v1.3/: ROADMAP.md
keys/: tmjos-archive-keyring.gpg
pool/main/t/tmjmenu/: tmjmenu_1.3.4-10_all.deb  tmjmenu_1.3.4-11_all.deb  tmjmenu_1.3.4-12_all.deb  tmjmenu_1.3.4-13_all.deb  tmjmenu_1.3.4-14_all.deb  tmjmenu_1.3.4-15_all.deb  tmjmenu_1.3.4-16_all.deb  tmjmenu_1.3.4-1_all.deb  tmjmenu_1.3.4-2_all.deb  tmjmenu_1.3.4-3_all.deb  tmjmenu_1.3.4-4_all.deb  tmjmenu_1.3.4-5_all.deb  tmjmenu_1.3.4-6_all.deb  tmjmenu_1.3.4-7_all.deb  tmjmenu_1.3.4-8_all.deb  tmjmenu_1.3.4-9_all.deb  tmjmenu_2.0.0_amd64.deb
pool/main/t/tmjos/: tmjos_1.3.0-1_all.deb  tmjos_1.3.0-2_all.deb  tmjos_1.3.4-1_all.deb  tmjos_2.0.0-1_all.deb  tmjos_2.0.0-2_all.deb  tmjos_2.0.0-3_all.deb
pool/main/t/tmjos-calamares-branding/: tmjos-calamares-branding_2.0.0-1_all.deb
pool/main/t/tmjos-defaults/: tmjos-defaults_1.3.0-1_all.deb  tmjos-defaults_1.3.0-2_all.deb  tmjos-defaults_1.3.0-3_all.deb  tmjos-defaults_1.3.4-1_all.deb  tmjos-defaults_2.0.0-1_all.deb
pool/main/t/tmjos-dock/: tmjos-dock_1.3.0-1_all.deb  tmjos-dock_1.3.0-2_all.deb
pool/main/t/tmjos-hello/: tmjos-hello_0.1.0-1_all.deb  tmjos-hello_0.1.0-2_all.deb
pool/main/t/tmjos-installer/: tmjos-installer_1.3.0-1_all.deb  tmjos-installer_1.3.4-1_all.deb  tmjos-installer_1.3.4-2_all.deb  tmjos-installer_1.3.4-3_all.deb
pool/main/t/tmjos-os-identity/: tmjos-os-identity_1.3.0-1_all.deb  tmjos-os-identity_1.3.0-2_all.deb  tmjos-os-identity_2.0.0-1_all.deb
pool/main/t/tmjos-shell-tweaks/: tmjos-shell-tweaks_1.3.0-1_all.deb  tmjos-shell-tweaks_1.3.0-3_all.deb
pool/main/t/tmjpad/: tmjpad_0.1.1-1_all.deb  tmjpad_0.1.2-1_all.deb  tmjpad_0.1.2-2_all.deb  tmjpad_2.0.0_amd64.deb
pool/main/t/tmjstore/: tmjstore_0.1.0-1_all.deb  tmjstore_0.1.1-1_all.deb  tmjstore_0.1.3-1_all.deb  tmjstore_0.1.5-1_all.deb  tmjstore_0.1.6-1_all.deb  tmjstore_0.1.6-2_all.deb  tmjstore_2.0.0_amd64.deb
scripts/: fix_wallpaper_typography.py  tmjos_customize.sh  tmjos_customize_debian.sh
tools/: build-iso-local.sh  patch-live-build.sh  tmjos-build.sh  tmjos-hooks-setup.sh  tmjos-lb-config.sh  tmjos-live-build-setup.sh  vendor-branding.sh  vendor-calamares-branding.sh  vendor-installer.sh  vendor-tmjmenu.sh  vendor-tmjpad.sh  vendor-tmjstore.sh
