[package]
name = "tmjstore"
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
description = "TMJOs Software Center — discover and install TMJOs apps via APT"
license = "GPL-3.0-or-later"
authors = ["TMJOs Team <tmjos-archive@tmjsistemas.com.br>"]
homepage = "https://github.com/TMJacometti/TMJOs/tree/main/apps/tmjstore"
repository = "https://github.com/TMJacometti/TMJOs"

[[bin]]
name = "tmjstore"
path = "src/main.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.10", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.8", features = ["v1_5"] }
glib = "0.21"
gio = "0.21"
quick-xml = "0.37"
dirs = "6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
