[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tmjstore"
version = "0.1.0"
description = "TMJOs Software Center — descobre e instala apps proprietários TMJOs."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "TMJOs Contributors"}]
keywords = ["store", "software-center", "tmjos", "gtk4", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Software Distribution",
]

# Runtime: PyGObject + GTK4 + libadwaita + libappstream-glib
# (apt: python3-gi gir1.2-gtk-4.0 gir1.2-adw-1 gir1.2-appstream-1.0)

[project.scripts]
tmjstore = "tmjstore.app:main"

[project.urls]
Homepage = "https://github.com/TMJacometti/TMJOs"
Repository = "https://github.com/TMJacometti/TMJOs"

[tool.setuptools.packages.find]
where = ["."]
include = ["tmjstore*"]
